added some test pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <ul>
             <li class="logo"><a href="#">BLKHRT</a></li>
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="work.html">work</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -28,7 +28,7 @@
     
 
 
-    <div class="container-fluid">
+    <div class="container">
             <p>At Black Heart Development we build stuff. Mostly that stuff is websites. 
         Sometimes that stuff is friendships, but mostly it's websites.</p>
         
