--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li class="logo"><a href="#">BLKHRT</a></li>
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="Dope.html">About</a></li>
             <li><a href="work.html">work</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
