moved some text

--- a/Dope.html
+++ b/Dope.html
@@ -32,12 +32,11 @@
     <section class="title">
       <!-- typed.js -->
       <div id="typed-strings">
-        <p>Dope</p>
         <p>Awesome</p>
-        <p>Amazing</p>
-        <p>Engaging</p>
         <p>Modern</p>
+        <p>Amazing</p>
         <p>the Sickest</p>
+        <p>Engaging</p>
       </div>
       
       <div class="middle">
@@ -49,7 +48,7 @@
     
     <section class="content">
       <div class="slant2">
-      <p>I make dope websites</p>
+      <!-- <p>I make dope websites</p> -->
       </div>
     </section>
   </div>
