made typed.js text funnier

--- a/Dope.html
+++ b/Dope.html
@@ -32,6 +32,7 @@
     <section class="title">
       <!-- typed.js -->
       <div id="typed-strings">
+        <p>pretty good</p>
         <p>Awesome</p>
         <p>Modern</p>
         <p>Amazing</p>
@@ -41,7 +42,7 @@
       
       <div class="middle">
         <h2>I Make
-          <span id="typed">the Dopest</span> websites
+          <span id="typed">pretty alright</span> websites
       </h2>
       </div>
     </section>
