more text updating

--- a/Dope.html
+++ b/Dope.html
@@ -26,18 +26,23 @@
     <main>
       <div class="slant">
       <a href="index.html"><h1> BLK HRT DEV</h1></a>
+      <h2>I Make
+        <span id="typed">pretty alright</span> websites
+    </h2>
     </div>
     </main>
     
     <section class="title">
       <!-- typed.js -->
       <div id="typed-strings">
+        <span>pretty</span>
         <p>pretty good</p>
-        <p>Awesome</p>
-        <p>Modern</p>
-        <p>Amazing</p>
-        <p>the Sickest</p>
-        <p>Engaging</p>
+        <p>awesome</p>
+        <p>wonderf</p>
+        <p>amazing</p>
+        <p>the sickest</p>
+        <p>the dopest</p>
+        <p>engaging, modern, beautiful</p>
       </div>
       
       <div class="middle">
@@ -60,11 +65,11 @@
 
 var typed = new Typed("#typed", {
   stringsElement: '#typed-strings',
-  typeSpeed: 80,
+  typeSpeed: 60,
   backSpeed: 60,
   smartBackspace: true,
-  // loop: true,
-  startDelay: 1000
+  startDelay: 3000,
+  // loop: true
 });
   
 </script>
