--- a/Dope.html
+++ b/Dope.html
@@ -26,7 +26,7 @@
     <main>
       <div class="slant">
       <a href="index.html"><h1> BLK HRT DEV</h1></a>
-      <h2>I Make
+      <h2>I make
         <span id="typed">pretty alright</span> websites
     </h2>
     </div>
@@ -37,8 +37,8 @@
       <div id="typed-strings">
         <span>pretty</span>
         <p>pretty good</p>
+        <p>pretty</p>
         <p>awesome</p>
-        <p>wonderf</p>
         <p>amazing</p>
         <p>the sickest</p>
         <p>the dopest</p>
@@ -46,9 +46,8 @@
       </div>
       
       <div class="middle">
-        <h2>I Make
-          <span id="typed">pretty alright</span> websites
-      </h2>
+        <h2>I Make Websites.</h2>
+        <h2>Fast.</h2>
       </div>
     </section>
     
@@ -69,6 +68,7 @@ var typed = new Typed("#typed", {
   backSpeed: 60,
   smartBackspace: true,
   startDelay: 3000,
+  showCursor: false,
   // loop: true
 });
   
