--- a/Dope.html
+++ b/Dope.html
@@ -9,23 +9,22 @@
   <link rel="stylesheet" type="text/css" media="screen" href="dope.css" />
 </head>
 <body>
-  <header>
-    <nav class="nav" id="nav">
-      <ul>
-        <li class="logo">BLKHRTDEV</li>
-      </ul>
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href="">Work</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+  <nav class="nav" id="nav">
+    <ul>
+     <li class="logo"><a href="">BLKHRTDEV</a></li>
+    </ul>
+    <ul class="menu">
+      <li><a href="">Home</a></li>
+      <li><a href="">Work</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Contact</a></li>
+    </ul>
+  </nav>
   <div class="wrapper">
     <main>
       <div class="slant">
-      <a href="index.html"><h1> BLK HRT DEV</h1></a>
+      <a class="h1" href=""><h1>Black Heart Creative</h1></a>
+      <h3>Web Development</h3>
       <h2>I make
         <span id="typed">pretty alright</span> websites
     </h2>
@@ -44,6 +43,7 @@
         <p>the dopest</p>
         <p>engaging, modern, beautiful</p>
       </div>
+      <!-- end typed.js -->
       
       <div class="middle">
         <h2>I Make Websites.</h2>
@@ -60,8 +60,8 @@
   
   
 <script>
-// import Typed from 'typed.js';
 
+// import Typed from 'typed.js';
 var typed = new Typed("#typed", {
   stringsElement: '#typed-strings',
   typeSpeed: 60,
@@ -69,7 +69,7 @@ var typed = new Typed("#typed", {
   smartBackspace: true,
   startDelay: 3000,
   showCursor: false,
-  // loop: true
+  loop: false
 });
   
 </script>
